...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blackRussian"
    android:padding="@dimen/_6sdp">

    <Button
        android:id="@+id/bt_exit"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/gilroy_medium"
        android:gravity="center"
        android:nextFocusLeft="@+id/bt_exit"
        android:nextFocusRight="@+id/bt_menu"
        android:nextFocusUp="@+id/bt_exit"
        android:nextFocusDown="@+id/bt_exit"
        android:padding="@dimen/_6sdp"
        android:text="@string/exit"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_10ssp"
...
